# COLMANT_LOQUET_VISION_HELLOKITTI

./: .gitignore  CMakeLists.txt  README.md  vision.pptx
include/: Plate.hpp  placeholder.txt
src/: CMakeLists.txt  main.cpp
